# opendata_vigan_V.1.0

./: .gitattributes  .gitignore  promptprojectstructure.txt
vigan-open-data/: .gitignore  README.md
vigan-open-data/ckan-extensions/ckanext-vigan/: setup.cfg  setup.py
vigan-open-data/ckan-extensions/ckanext-vigan/ckanext/: __init__.py
vigan-open-data/ckan-extensions/ckanext-vigan/ckanext/vigan/: __init__.py  plugin.py
vigan-open-data/ckan-extensions/ckanext-vigan/ckanext/vigan/fanstatic/: README.md
vigan-open-data/ckan-extensions/ckanext-vigan/ckanext/vigan/public/css/: layout.css  vigan.css
vigan-open-data/ckan-extensions/ckanext-vigan/ckanext/vigan/public/js/: vigan.js
vigan-open-data/ckan-extensions/ckanext-vigan/ckanext/vigan/templates/: base.html  footer.html  header.html
vigan-open-data/ckan-extensions/ckanext-vigan/ckanext/vigan/templates/admin/: index.html
vigan-open-data/ckan-extensions/ckanext-vigan/ckanext/vigan/templates/home/: index.html
vigan-open-data/ckan-extensions/ckanext-vigan/ckanext/vigan/templates/organization/: index.html
vigan-open-data/ckan-extensions/ckanext-vigan/ckanext/vigan/templates/organization/snippets/: helper.html  organization_list.html
vigan-open-data/ckan-extensions/ckanext-vigan/ckanext/vigan/templates/package/: activity_stream.html  read.html  resource_read.html  search.html
vigan-open-data/ckan-extensions/ckanext-vigan/ckanext/vigan/templates/snippets/: stream.html
vigan-open-data/docker/: .env.example  docker-compose.dev.yml  docker-compose.yml
vigan-open-data/docs/: ckan-body-only-audit.md
(+78 files in other folders)
