[metadata]
name             = ckanext-vigan
version          = 1.0.0
description      = Vigan City Open Data Portal — Official CKAN Theme
long_description = file: README.md
author           = City Government of Vigan — ICT Office
author_email     = ict@vigan.gov.ph
url              = https://github.com/vigan-city/ckanext-vigan
license          = MIT
classifiers      =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages         = find:
include_package_data = True
zip_safe         = False
install_requires =
    ckan>=2.10.0

[options.entry_points]
ckan.plugins =
    vigan = ckanext.vigan.plugin:ViganPlugin

[options.package_data]
ckanext.vigan =
    templates/**/*
    public/**/*
    fanstatic/**/*
